# vat

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  demo.tape
examples/: .bashrc  .tmux.conf  crontab  sample.css  sample.csv  sample.html  sample.js  sample.json  sample.kdl  sample.md  sample.parquet  sample.py  sample.rs  sample.tcss  sample.toml  sample.ts  sample.tsv  sample.tsx  sample.yaml  users.csv
examples/.ssh/: config
samples/: .env.example  .gitignore  Dockerfile  Makefile.sample  config.ini  data.xml  schema.sql  settings.properties  test.db
src/: analyzer.rs  app.rs  main.rs
src/engines/: archive.rs  dockerfile.rs  env.rs  gitignore.rs  hex.rs  html.rs  image.rs  ini.rs  jsonl.rs  lock.rs  log.rs  logic.rs  makefile.rs  mod.rs  sqlite.rs  syntax.rs  table.rs  text.rs  tree.rs  xml.rs
